# kube-anypod

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: release-drafter.yml
.github/workflows/: release.yml
src/: main.rs  parse.rs
